# C4EngineExamples

./: .clang-format  .gitignore  CMakeLists.txt  CreateJunctions.bat  LICENSE  Readme.md
001_Simple/: 001_Simple.vcxproj
001_Simple/Code/: AppInfo.hpp  Game.cpp  Game.hpp  Input.cpp  Input.hpp  World.cpp  World.hpp
002_Text_Display/: 002_Text_Display.vcxproj
002_Text_Display/Code/: Game.cpp  Game.hpp  Input.cpp  World.cpp  World.hpp
003_Start_Window/: 003_Start_Window.vcxproj
003_Start_Window/Code/: AppInfo.hpp  Game.cpp  Game.hpp  Input.cpp  StartWindow.cpp  StartWindow.hpp  World.cpp  World.hpp
004_Improved_Start_Window/: 004_Improved_Start_Window.vcxproj
004_Improved_Start_Window/Code/: AppInfo.hpp  Game.cpp  Game.hpp  Input.hpp  StartWindow.cpp  StartWindow.hpp  World.cpp  World.hpp
005_Physics_and_Collision/: 005_Physics_and_Collision.vcxproj
005_Physics_and_Collision/Code/: AppInfo.hpp  Game.cpp  Game.hpp  Input.cpp  StartWindow.cpp  World.cpp  World.hpp
006_Simple_Shader/: 006_Simple_Shader.vcxproj  CreateJunction.bat
006_Simple_Shader/Code/: AppInfo.hpp  Game.cpp  Game.hpp  StartWindow.cpp  World.cpp  World.hpp
007_Simple_Animated_Shader/: 007_Simple_Animated_Shader.vcxproj
007_Simple_Animated_Shader/Code/: AppInfo.hpp  Game.cpp  Game.hpp  StartWindow.cpp  StartWindow.hpp  World.cpp  World.hpp
008_Adding_Geometry_with_Collision_Programatically/Code/: AppInfo.hpp  BoxesGrid.cpp  BoxesGrid.hpp  Game.cpp  Game.hpp  Input.cpp  StartWindow.cpp  World.cpp
008_Adding_Geometry_with_Collision_Programmatically/: 008_Adding_Geometry_with_Collision_Programmatically.vcxproj  CreateJunction.bat
008_Adding_Geometry_with_Collision_Programmatically/Code/: Input.hpp  (+3 more)
009_Custom_Controller/: 009_Custom_Controller.vcxproj
010_User_Controlled_Object/: 010_User_Controlled_Object.vcxproj
011_Texture/: 011_Texture.vcxproj
012_ParallelProcessing/: 012_ParallelProcessing.vcxproj
cmake/: NSISCodeSignSection.txt  compute_and_display_build_setup.cmake  copy_data_to_build_directory.cmake  game.cfg.in  gcc_setup.cmake  init_default_variables.cmake  setup_c4_engine_build.cmake  setup_code_signing.cmake  setup_installer.cmake  setup_user_selectable_build_options.cmake  win_setup.cmake
cmake/EngineCode/: CMakeLists.txt
cmake/EngineCode/cmake/: apply_patches.cmake  gcc_setup.cmake  msvc_setup.cmake  win_setup.cmake
cmake/GameCode/: CMakeLists.txt  handleActiveApp.cmake
cmake/PluginCode/ColladaImporter/: CMakeLists.txt
cmake/PluginCode/MovieTool/: CMakeLists.txt
cmake/PluginCode/OpenGexImporter/: CMakeLists.txt
cmake/PluginCode/ResourcePacker/: CMakeLists.txt
cmake/PluginCode/SlugImporter/: CMakeLists.txt
cmake/PluginCode/SoundTool/: CMakeLists.txt
cmake/PluginCode/StringImporter/: CMakeLists.txt
cmake/PluginCode/TextureTool/: CMakeLists.txt
cmake/PluginCode/WorldEditor/: CMakeLists.txt
licenses/: Copyright.txt
src/: CMakeLists.txt
src/001_simple/: CMakeLists.txt  Game.cpp  Input.cpp  Input.hpp  World.cpp  handleActiveApp.cmake
src/001_simple/Data/Game/: scribble.tex
src/002_text_display/: CMakeLists.txt  Game.cpp  Game.hpp  Input.cpp  World.hpp
src/002_text_display/Data/Game/: scribble.tex
src/003_start_window/: CMakeLists.txt  Game.cpp  Game.hpp  StartWindow.cpp  StartWindow.hpp
src/004_improved_start_window/: Game.cpp  Game.hpp  StartWindow.cpp
src/005_physics_and_collision/: Game.cpp  Game.hpp  StartWindow.cpp  World.cpp
src/005_physics_and_collision/Data/Game/: scribble.tex
src/006_simple_shader/: CMakeLists.txt  Game.cpp  Input.cpp  StartWindow.cpp  StartWindow.hpp  handleActiveApp.cmake
src/006_simple_shader/Data/World/: simple_shader.wld
src/007_simple_animated_shader/: Game.hpp  Input.hpp  StartWindow.cpp  World.cpp
src/008_adding_geometry_with_collision_programmatically/: BoxesGrid.cpp  CMakeLists.txt  Game.cpp  Game.hpp  Input.cpp  Input.hpp  StartWindow.cpp  StartWindow.hpp  World.cpp
src/008_adding_geometry_with_collision_programmatically/Data/Game/: gameStrings.str
src/009_custom_controller/: BoxesGrid.cpp  BoxesGrid.hpp  Game.cpp  Game.hpp  RotateController.cpp  RotateController.hpp  StartWindow.cpp  World.cpp  World.hpp  handleActiveApp.cmake
src/009_custom_controller/Data/World/: custom_controller.wld
src/010_node_iterator/: BoxesGrid.cpp  BoxesGrid.hpp  CMakeLists.txt  Game.cpp  Input.cpp  NodeIterator.hpp  RotateController.cpp  RotateController.hpp  StartWindow.cpp  World.cpp
src/010_node_iterator/Data/World/: custom_controller_prgm.wld  simple_physics_prgm.wld  test_custom_controller.wld  test_save.wld  tmp_simple_physics.wld
src/011_user_controlled_object/: Game.cpp  Game.hpp  Input.cpp  Input.hpp  SpaceShipController.cpp  SpaceShipController.hpp  StartWindow.cpp  StartWindow.hpp  World.cpp  World.hpp  handleActiveApp.cmake
src/011_user_controlled_object/Data/Game/: gameStrings.str  scribble.tex
src/011_user_controlled_object/Data/World/: 011_user_controlled_object.wld
src/011_user_controlled_object/Import/Game/: scribble.tga
src/012_texture/: CMakeLists.txt  Game.cpp  World.cpp  World.hpp  handleActiveApp.cmake
src/012_texture/Data/Game/: Rocks_Hexagons_001_diff.tex  Rocks_Hexagons_001_height-p.tex  scribble.tex  sky_front.tex  sky_left.tex  sky_right.tex  sky_top.tex  wall_stone_021_diff.tex
src/012_texture/Data/World/: 012_texture.wld
src/012_texture/Import/Game/: Rocks_Hexagons_001_diff.cfg  Rocks_Hexagons_001_height.cfg  Rocks_Hexagons_001_nrml.tga  gameStrings.txt  sky_back.tga  sky_bottom.tga  sky_left.tga  wall_stone_021_height.cfg  wall_stone_021_nrml.tga
src/012_texture/Import/Game/Wall_Stone_021_SD/: wall_stone_021_amboccl.tga
src/013_c4engine_logo/: Game.cpp  Game.hpp  Input.cpp  SpaceShipController.hpp  StartWindow.cpp  StartWindow.hpp  World.cpp  World.hpp  handleActiveApp.cmake
src/013_terrain/: Game.cpp  Game.hpp  World.cpp
src/014_terrain/: CMakeLists.txt  Game.hpp  Input.cpp  World.hpp
src/014_terrain/Data/Game/: scribble-h.tex  scribble.tex  terraintex.tex
src/014_terrain/Data/World/: 013_terrain.wld
src/014_terrain/Import/Game/: scribble.cfg
(+99 files in other folders)
