# Add all subfolders
add_subdirectory( 001_simple )
add_subdirectory( 002_text_display )
add_subdirectory( 003_start_window )
add_subdirectory( 004_improved_start_window )
add_subdirectory( 005_physics_and_collision )
add_subdirectory( 006_simple_shader )
add_subdirectory( 007_simple_animated_shader )
add_subdirectory( 008_adding_geometry_with_collision_programmatically )
add_subdirectory( 009_custom_controller )
add_subdirectory( 010_node_iterator )
add_subdirectory( 011_user_controlled_object )
add_subdirectory( 012_texture )
#add_subdirectory( 013_terrain )

set( C4ApplicationNames ${C4ApplicationNames}    PARENT_SCOPE )
set( C4ActiveApp        ${C4ActiveApp}           PARENT_SCOPE )

string( TOLOWER ${C4ActiveApp} C4ActiveAppLowCase)
if ( C4ActiveAppLowCase STREQUAL "the31st" )
    include ( ${C4CMakeDir}/GameCode/handleActiveApp.cmake )
else()
    include ( ${C4ActiveApp}/handleActiveApp.cmake )
endif()